WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27311
[V8] Layout test failures for drawImage in Canvas
https://bugs.webkit.org/show_bug.cgi?id=27311
Summary
[V8] Layout test failures for drawImage in Canvas
Hin-Chung Lam
Reported
2009-07-15 12:09:28 PDT
Bug Introduces in
http://trac.webkit.org/changeset/45929
A return statement of "return v8::Undefined()" is missing in CanvasRenderingContext2DDrawImage in bindings/v8/custom/V8CanvasRenderingContext2DCustom.cpp
Attachments
patch
(1.11 KB, patch)
2009-07-15 12:14 PDT
,
Hin-Chung Lam
levin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hin-Chung Lam
Comment 1
2009-07-15 12:14:46 PDT
Created
attachment 32801
[details]
patch
David Levin
Comment 2
2009-07-15 12:27:40 PDT
Committed as
http://trac.webkit.org/changeset/45936
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug