2009-07-15  Alpha Lam  <hclam@chromium.org>

Reviewed by David Levin.

        [V8] Layout test failures for drawImage in Canvas
        https://bugs.webkit.org/show_bug.cgi?id=27311

        Fixing several canvas layout tests failures due to a
        missing return statement in CanvasRenderingContext2DDrawImage() which
        was accidentally removed in r45929.

        * bindings/v8/custom/V8CanvasRenderingContext2DCustom.cpp:

Canonical link: https://commits.webkit.org/37566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45936 268f45cc-cd09-0410-ab3c-d52691b4dbfc